--- a/test/config/LongVerificationScenarios.config
+++ b/test/config/LongVerificationScenarios.config
@@ -1,6 +1,6 @@
 # Syntax
 # Each group tag indicates the beginning of a new verification set which will be summarized and sent out in its own email.  
-# Notice how information from the header (subject, recipients, etc.) can be specified again under a group tag to override the defaults.
+# Notice how information from the header can be specified again under a group tag to override the defaults.
 
 # DASH = Don't Run
 # A line that begins with a dash tells the verifier not to run the scenario, but to still include its results in the report.  
@@ -10,11 +10,7 @@
 # A line that begins with an asterisk tells the verifier that failure is to be expected from the scenario.  
 # These scenarios will not be run and will be placed in the separate yellow block of the email.
 
-Subject=BioGears Verification Test Summary
-Sender=biogears@ara.com
-SMTP=smtp.ara.com
-Recipients=abray@ara.com, jwebb@ara.com, abaird@ara.com, jcarter@ara.com, rmetoyer@ara.com, bwelch@ara.com
-SendEmail=true
+ReportName=BioGears Verification Test Summary
 ExecuteTests=true
 PlotResults=true
 PercentDifference=2.0
