--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,3 +1,3 @@
 include(${CMAKE_CURRENT_SOURCE_DIR}/Engine.cmake)
-#include(${CMAKE_CURRENT_SOURCE_DIR}/EngineJNI.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/EngineJNI.cmake)
 include(${CMAKE_CURRENT_SOURCE_DIR}/ScenarioDriver.cmake)
