--- a/test/config/BGEUnitTests.config
+++ b/test/config/BGEUnitTests.config
@@ -8,11 +8,7 @@
 # FullPlotErrors = Plot all data points only for failing data
 # MemoryFastPlot = Do a fast plot, but manage memory better, slower plotting, but can handle larger files
 
-Subject=Biogears Unit Test Summary
-Sender=biogears@ara.com
-SMTP=smtp.ara.com
-Recipients=abray@ara.com, jwebb@ara.com, abaird@ara.com, jcarter@ara.com, rmetoyer@ara.com, bwelch@ara.com
-SendEmail=true
+ReportName=Biogears Unit Test Summary
 ExecuteTests=true
 PlotResults=true
 PercentDifference=2.0
