--- a/test/config/InitialPatientStates.config
+++ b/test/config/InitialPatientStates.config
@@ -2,11 +2,7 @@
 # DASH = Don't Run
 # ASTERISK = Expected Failure, don't run and put it in the expected failures table (Run Yellow)
 
-Subject=Patient Validation Test Summary
-Sender=biogears@ara.com
-SMTP=smtp.ara.com
-Recipients=abray@ara.com, jwebb@ara.com, abaird@ara.com, jcarter@ara.com, rmetoyer@ara.com, bwelch@ara.com
-SendEmail=false
+ReportName=Initial Patient State Test Summary
 ExecuteTests=true
 PlotResults=false
 PercentDifference=2.0
@@ -25,6 +21,5 @@ Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=../verification/Scenarios/ Computed=./Scenarios/
 
 @group
-subject=BioGears Patient Validation
 
 InitialPatientState.xml = ScenarioTest
