--- a/test/config/ValidationPatients.config
+++ b/test/config/ValidationPatients.config
@@ -2,11 +2,7 @@
 # DASH = Don't Run
 # ASTERISK = Expected Failure, don't run and put it in the expected failures table (Run Yellow)
 
-Subject=Patient Validation Test Summary
-Sender=biogears@ara.com
-SMTP=smtp.ara.com
-Recipients=abray@ara.com, jwebb@ara.com, abaird@ara.com, jcarter@ara.com, rmetoyer@ara.com, bwelch@ara.com
-SendEmail=true
+ReportName=Patient Validation Test Summary
 ExecuteTests=true
 PlotResults=true
 PercentDifference=2.0
@@ -25,8 +21,6 @@ Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=../verification/Scenarios/ Computed=./Scenarios/
 
 @group
-subject=BioGears Patient Validation
 
 Validation/Patient-Validation.xml = ScenarioTest
-
 
