--- a/test/config/Characterize.config
+++ b/test/config/Characterize.config
@@ -1,4 +1,5 @@
-#UniqueName=Directory to process, the baseline directory, Sort=, Divsor=
+# This was used to characterize the cv circuit and how modifying the driver changed the circuit hemodynamics
+# UniqueName=Directory to process, the baseline directory, Sort=, Divsor=
 # - Results will be normalized to the provided baseline directory
 # - Sort=Key, where any results column name containing the Key string in it, will be placed into a results file with the Key name
 # - A popular use of sort is : Sort=Flow, Sort=Volume, Sort=Pressure
