--- a/test/config/DebugRun.config
+++ b/test/config/DebugRun.config
@@ -24,9 +24,9 @@ Executor=mil.tatrc.physiology.datamodel.testing.CDMUnitTestDriver
 Executor=mil.tatrc.physiology.biogears.testing.BGEUnitTestDriver
 Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 
-Macro CDMUnitTest=CDMUnitTestDriver FastPlotErrors Baseline=../verification/UnitTests/CDMTests/ Computed=./UnitTests/CDMTests/
-Macro BGEUnitTest=BGEUnitTestDriver FastPlot Baseline=../verification/UnitTests/BioGearsTests/ Computed=./UnitTests/BioGearsTests/
-Macro BGEUnitTestFull=BGEUnitTestDriver FullPlot Baseline=../verification/UnitTests/BioGearsTests/ Computed=./UnitTests/BioGearsTests/
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=../verification/Scenarios/ Computed=./Scenarios/ #Results=/BasicStandard
+Macro CDMUnitTest=CDMUnitTestDriver FastPlotErrors Baseline=../verification/UnitTests/CDMTests/ Computed=./test_results/unit_tests/cdm/
+Macro BGEUnitTest=BGEUnitTestDriver FastPlot Baseline=../verification/UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears/
+Macro BGEUnitTestFull=BGEUnitTestDriver FullPlot Baseline=../verification/UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears/
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=../verification/Scenarios/ Computed=./test_results/scenarios/ #Results=/BasicStandard
 
 Patient/BasicStandard.xml = ScenarioTest
