--- a/test/config/ValidationDrugs.config
+++ b/test/config/ValidationDrugs.config
@@ -22,7 +22,7 @@ Threads=-1
 
 Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=../verification/Scenarios/ Computed=./Scenarios/ #Results=/BasicStandard
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=../verification/Scenarios/ Computed=./test_results/scenarios/ #Results=/BasicStandard
 
 
 Validation/AlbuterolValidation.xml=ScenarioTest
