--- a/test/config/ValidationPatients.config
+++ b/test/config/ValidationPatients.config
@@ -18,7 +18,7 @@ Patients=all
 
 Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=../verification/Scenarios/ Computed=./Scenarios/
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=../verification/Scenarios/ Computed=./test_results/scenarios/
 
 @group
 
