Create directory before copying target
If directory is not present on Linux, instead of copying file inside folder, a
file gets created with the folder name.

--- a/schema/CMakeLists.txt
+++ b/schema/CMakeLists.txt
@@ -41,6 +41,7 @@ if(MSVC)
   target_link_libraries(DataModelBindings advapi32.lib)
 endif()
 add_custom_command(TARGET DataModelBindings POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E make_directory ${INSTALL_BIN}/${CONFIGURATION}${EX_CONFIG}
                    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:DataModelBindings> ${INSTALL_BIN}/${CONFIGURATION}${EX_CONFIG}
                    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/xsd ${INSTALL_BIN}/xsd)
 install(TARGETS DataModelBindings 
