Adding Superbuild capabilities
Instead of building BioGears once with "SUPERBUILD" CMake variable ON to build
BioGears' dependencies and then manually change the value to build BioGears
itself, one can simply set "SUPERBUILD" to ON to build the dependencies, and
BioGears project will be built in an inner-build directory, using the dependencies
built in the outer-build directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ endif()
 set (SUPERBUILD ON CACHE BOOL "Initial pull and build of all dependent libraries/executables")
 if(SUPERBUILD)
   include(cmake/ExternalDependencies.cmake)
+  return()
 else()
   include(BioGears.cmake)
 endif()
