Update java how to and java does not seem to need to load xerces-c on linux, so I won't...

--- a/sdk/.classpath
+++ b/sdk/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="howto/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/BioGears.jar"/>
+	<classpathentry kind="var" path="PHYSIOLOGY_HOME/bin/BioGears.jar"/>
 	<classpathentry kind="output" path="howto/build/java"/>
 </classpath>
