Fixed install issues on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,8 @@ endif()
 string(TOLOWER ${CONFIGURATION} CONFIGURATION)
 
 set(INSTALL_BIN ${CMAKE_SOURCE_DIR}/bin)
-set(INSTALL_INC ${CMAKE_SOURCE_DIR}/sdk)
-set(INSTALL_LIB ${CMAKE_SOURCE_DIR}/sdk/lib)
+set(INSTALL_SDK_INC ${CMAKE_SOURCE_DIR}/sdk)
+set(INSTALL_SDK_LIB ${CMAKE_SOURCE_DIR}/sdk/lib)
 file(MAKE_DIRECTORY "${INSTALL_BIN}/debug${EX_CONFIG}")
 file(MAKE_DIRECTORY "${INSTALL_BIN}/release${EX_CONFIG}")
 file(MAKE_DIRECTORY "${INSTALL_BIN}/relwithdebinfo${EX_CONFIG}")
