Added genData and getStates to the install Bill found a better way to look for xjc Added the SDK to the BioGears.sln so you can easily run the howto's after you build the code

--- a/schema/CMakeLists.txt
+++ b/schema/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Files in the project 
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/GenerateCDMBindings.cmake)
+#if(BUILD_BIND)
+  include(${CMAKE_CURRENT_SOURCE_DIR}/GenerateCDMBindings.cmake)
+#endif()
 
 file(GLOB BIND_FILES
     "cpp/bind/*.hxx"
