We are fully an out of source build now Added a config file that will point back to the src so tests and other executables can go grab data from the src directory Did another pass on making the build compliant for more platforms and compilers

--- a/schema/CMakeLists.txt
+++ b/schema/CMakeLists.txt
@@ -3,13 +3,13 @@
   include(${CMAKE_CURRENT_SOURCE_DIR}/GenerateCDMBindings.cmake)
 
 file(GLOB BIND_FILES
-    "cpp/bind/*.hxx"
-    "cpp/bind/*.cxx"
+    "${CMAKE_BINARY_DIR}/schema/cpp/bind/*.hxx"
+    "${CMAKE_BINARY_DIR}/schema/cpp/bind/*.cxx"
 )
 if(MSVC)
   FILE(GLOB_RECURSE MIN_BIND_FILES
-    "cpp/bind/min/*.hxx"
-    "cpp/bind/min/*.cxx"
+    "${CMAKE_BINARY_DIR}/schema/cpp/bind/min/*.hxx"
+    "${CMAKE_BINARY_DIR}/schema/cpp/bind/min/*.cxx"
   )
   SOURCE_GROUP("" FILES ${MIN_BIND_FILES})
   SET(SOURCE ${MIN_BIND_FILES})
@@ -25,7 +25,7 @@ endif()
 # The DLL we are building
 add_library(DataModelBindings SHARED ${SOURCE})
 # Preprocessor Definitions and Include Paths
-target_include_directories(DataModelBindings PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/cpp/bind)
+target_include_directories(DataModelBindings PRIVATE ${CMAKE_BINARY_DIR}/schema/cpp/bind)
 target_include_directories(DataModelBindings PRIVATE ${XercesC_INCLUDE_DIR})
 target_include_directories(DataModelBindings PRIVATE ${XSD_INCLUDE_DIR})
 set(FLAGS)
@@ -64,13 +64,13 @@ else()# Copy so files to the bin
 endif()
 # Copy lib/so files to the sdk/lib
 install(TARGETS DataModelBindings         
-        LIBRARY CONFIGURATIONS Release DESTINATION ${INSTALL_SDK_LIB}/release${EX_CONFIG}
-        ARCHIVE CONFIGURATIONS Release DESTINATION ${INSTALL_SDK_LIB}/release${EX_CONFIG})
+        LIBRARY CONFIGURATIONS Release DESTINATION ${INSTALL_LIB}/release${EX_CONFIG}
+        ARCHIVE CONFIGURATIONS Release DESTINATION ${INSTALL_LIB}/release${EX_CONFIG})
 install(TARGETS DataModelBindings 
-        LIBRARY CONFIGURATIONS Debug DESTINATION ${INSTALL_SDK_LIB}/debug${EX_CONFIG}
-        ARCHIVE CONFIGURATIONS Debug DESTINATION ${INSTALL_SDK_LIB}/debug${EX_CONFIG})
+        LIBRARY CONFIGURATIONS Debug DESTINATION ${INSTALL_LIB}/debug${EX_CONFIG}
+        ARCHIVE CONFIGURATIONS Debug DESTINATION ${INSTALL_LIB}/debug${EX_CONFIG})
 install(TARGETS DataModelBindings  
-        LIBRARY CONFIGURATIONS RelWithDebInfo DESTINATION ${INSTALL_SDK_LIB}/relwithdebinfo${EX_CONFIG}
-        ARCHIVE CONFIGURATIONS RelWithDebInfo DESTINATION ${INSTALL_SDK_LIB}/relwithdebinfo${EX_CONFIG})
+        LIBRARY CONFIGURATIONS RelWithDebInfo DESTINATION ${INSTALL_LIB}/relwithdebinfo${EX_CONFIG}
+        ARCHIVE CONFIGURATIONS RelWithDebInfo DESTINATION ${INSTALL_LIB}/relwithdebinfo${EX_CONFIG})
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/xsd DESTINATION ${INSTALL_BIN})
-install_headers("${CMAKE_CURRENT_SOURCE_DIR}/cpp/bind" "bind")
+install_headers("${CMAKE_BINARY_DIR}/schema/cpp/bind" "bind")
