--- a/bin/run.cmake.in
+++ b/bin/run.cmake.in
@@ -23,18 +23,18 @@ endif()
 #set(Java_JAVA_EXECUTABLE "/the_jdk_I_want/bin/java)
 
 set(JAVA_CLASSPATH BioGears.jar
-        ../jar/jcommon-1.0.16.jar
-        ../jar/jdom-2.0.2.jar
-        ../jar/jfreechart-1.0.13.jar
-        ../jar/guava-11.0.2.jar
-        ../jar/log4j-1.2.17.jar
-        ../jar/poi-3.13-20150929.jar
-        ../jar/poi-ooxml-3.13-20150929.jar
-        ../jar/poi-ooxml-schemas-3.13-20150929.jar
-        ../jar/pdfbox-2.0.0-RC3.jar
-        ../jar/reflections-0.9.9-RC1-uberjar.jar
-        ../jar/xmlbeans-2.6.0.jar
-        ../jar/zip4j-1.3.1.jar)
+        @DATA_ROOT@/jar/jcommon-1.0.16.jar
+        @DATA_ROOT@/jar/jdom-2.0.2.jar
+        @DATA_ROOT@/jar/jfreechart-1.0.13.jar
+        @DATA_ROOT@/jar/guava-11.0.2.jar
+        @DATA_ROOT@/jar/log4j-1.2.17.jar
+        @DATA_ROOT@/jar/poi-3.13-20150929.jar
+        @DATA_ROOT@/jar/poi-ooxml-3.13-20150929.jar
+        @DATA_ROOT@/jar/poi-ooxml-schemas-3.13-20150929.jar
+        @DATA_ROOT@/jar/pdfbox-2.0.0-RC3.jar
+        @DATA_ROOT@/jar/reflections-0.9.9-RC1-uberjar.jar
+        @DATA_ROOT@/jar/xmlbeans-2.6.0.jar
+        @DATA_ROOT@/jar/zip4j-1.3.1.jar)
 
 if(NOT WIN32)
   string(REPLACE ";" ":" JAVA_CLASSPATH "${JAVA_CLASSPATH}")
@@ -42,15 +42,15 @@ endif()
 
 
 if(TYPE STREQUAL "SystemValidation")
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ../test/config/ValidationSystems.config)
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.SystemValidation)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ValidationSystems.config)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.SystemValidation )
 elseif(TYPE STREQUAL "PatientValidation")
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ../test/config/ValidationPatients.config)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ValidationPatients.config)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.PatientValidation)
 elseif(TYPE STREQUAL "genData")
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.biogears.dataset.DataSetReader)
 elseif(TYPE STREQUAL "genStates")
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ../test/config/InitialPatientStates.config)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver InitialPatientStates.config)
 else()
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ../test/config/${TYPE}.config)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ${TYPE}.config)
 endif()
