--- a/schema/.project
+++ b/schema/.project
@@ -14,4 +14,17 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>BINDINGS</name>
+			<type>2</type>
+			<locationURI>BINDINGS</locationURI>
+		</link>
+	</linkedResources>
+	<variableList>
+		<variable>
+			<name>BINDINGS</name>
+			<value>file:/C:/Programming/BioGears/builds/x64/InnerBuild/schema/java</value>
+		</variable>
+	</variableList>
 </projectDescription>
