--- a/test/config/BGEUnitTests.config
+++ b/test/config/BGEUnitTests.config
@@ -15,8 +15,8 @@ PercentDifference=2.0
 Threads=-1
 
 Executor=mil.tatrc.physiology.biogears.testing.BGEUnitTestDriver
-Macro BGEUnitTest=BGEUnitTestDriver FastPlotErrors Baseline=../verification/UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears/
-Macro BGEUnitTestFull=BGEUnitTestDriver FullPlotErrors Baseline=../verification/UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears/
+Macro BGEUnitTest=BGEUnitTestDriver FastPlotErrors Baseline=UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears/
+Macro BGEUnitTestFull=BGEUnitTestDriver FullPlotErrors Baseline=UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears/
 
 @group Cardiovascular
 CardiovascularCircuitAndTransport = BGEUnitTest Results=CardiovascularCircuitOutput,CardiovascularTransportOutput
