--- a/test/config/CDMUnitTests.config
+++ b/test/config/CDMUnitTests.config
@@ -15,7 +15,7 @@ PercentDifference=2.0
 Threads=-1
 
 Executor=mil.tatrc.physiology.datamodel.testing.CDMUnitTestDriver
-Macro CDMUnitTest=CDMUnitTestDriver FastPlotErrors Baseline=../verification/UnitTests/CDMTests/ Computed=./test_results/unit_tests/cdm/
+Macro CDMUnitTest=CDMUnitTestDriver FastPlotErrors Baseline=UnitTests/CDMTests/ Computed=./test_results/unit_tests/cdm/
 
 @group Simple Circuits
 BadDiodeDC = CDMUnitTest
