'Patch' the configuration.guess file used in log4cpp. Addded a hotfix to see if xsd will generate on debian

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,23 @@ if(POLICY CMP0053)
   cmake_policy(SET CMP0053 NEW)
 endif()
 
+MACRO(install_headers SRC_DIR DEST)
+  file(GLOB_RECURSE HEADER_LIST 
+    ${SRC_DIR}/*.h 
+    ${SRC_DIR}/*.hxx
+    ${SRC_DIR}/*.inl)
+  foreach(HEADER ${HEADER_LIST})
+    #message(STATUS "Header at ${HEADER}")
+    STRING(REPLACE ${SRC_DIR}/ "" REL_DIR ${HEADER})
+    #message(STATUS "Relative Path ${REL_DIR}")  
+    set(FULL_LOC ${CMAKE_INSTALL_PREFIX}/include/${DEST}/${REL_DIR})
+    #message(STATUS "File should goto ${FULL_LOC}")
+    get_filename_component(DEST_DIR ${FULL_LOC} PATH) 
+    #message(STATUS "Going to ${DEST_DIR}")
+    install(FILES ${HEADER} DESTINATION ${DEST_DIR})
+  endforeach()    
+ENDMACRO(install_headers)
+
 if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
   message( STATUS "64 bits compiler detected" )    
   set( EX_CONFIG "" )
